work in progress
wip

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <head>
-    <link href="..\css.css" rel="stylesheet" type="text/css">
-    <link href="..\960_12_col.css" rel="stylesheet" type="text/css">
+    <link href="..\css/css.css" rel="stylesheet" type="text/css">
+    <link href="..\css/960_12_col.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -19,16 +19,16 @@
     <div>
         <ul id="navbar">
         <li><a href="..\index.html">Blog</a></li>
-        <li><a href="about_index.html">About</a></li>
-        <li><a href="..\MapTracker/map_index.html">Map Tracker</a></li>
-        <li><a href="..\Photos/photofeed_index.html">Photo Feed</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="..\map.html">Map Tracker</a></li>
+        <li><a href="..\photos.html">Photo Feed</a></li>
         <li><a href="..\gear.html">Gear List</a></li>
         </ul>
     </div>
 
 </div>
 
-<body class="container_12">
+<body>
 
 <div id="blog-content" class="grid_8">
 
