--- a/gear.html
+++ b/gear.html
@@ -2,8 +2,8 @@
 
 <head>
     <!-- Style sheet -->
-    <link href="css.css" rel="stylesheet" type="text/css">
-    <link href="960_12_col.css" rel="stylesheet" type="text/css">
+    <link href="css/css.css" rel="stylesheet" type="text/css">
+    <link href="css/960_12_col.css" rel="stylesheet" type="text/css">
     <!-- Google web fonts -->
     <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
