--- a/gear.html
+++ b/gear.html
@@ -24,9 +24,9 @@
     <div>
         <ul id="navbar">
         <li><a href="index.html">Blog</a></li>
-        <li><a href="About/about_index.html">About</a></li>
-        <li><a href="MapTracker/map_index.html">Map Tracker</a></li>
-        <li><a href="Photos/photofeed_index.html">Photo Feed</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="map.html">Map Tracker</a></li>
+        <li><a href="photos.html">Photo Feed</a></li>
         <li><a href="gear.html">Gear List</a></li>
         </ul>
     </div>
