--- a/map.html
+++ b/map.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <head>
-    <link href="..\css/css.css" rel="stylesheet" type="text/css">
-    <link href="..\css/960_12_col.css" rel="stylesheet" type="text/css">
+    <link href="css/css.css" rel="stylesheet" type="text/css">
+    <link href="css/960_12_col.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -18,11 +18,11 @@
 
     <div>
         <ul id="navbar">
-        <li><a href="..\index.html">Blog</a></li>
-        <li><a href="..\About/about_index.html">About</a></li>
-        <li><a class="navbar-links" href="#">Map Tracker</a></li>
-        <li><a href="..\Photos/photofeed_index.html">Photo Feed</a></li>
-        <li><a href="..\gear.html">Gear List</a></li>
+        <li><a href="index.html">Blog</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#">Map Tracker</a></li>
+        <li><a href="photos.html">Photo Feed</a></li>
+        <li><a href="gear.html">Gear List</a></li>
         </ul>
     </div>
 
