--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@
 
     <div>
         <ul id="navbar">
-        <li><a href="..\index.html">Blog</a></li>
+        <li><a href="index.html">Blog</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="..\map.html">Map Tracker</a></li>
-        <li><a href="..\photos.html">Photo Feed</a></li>
-        <li><a href="..\gear.html">Gear List</a></li>
+        <li><a href="map.html">Map Tracker</a></li>
+        <li><a href="photos.html">Photo Feed</a></li>
+        <li><a href="gear.html">Gear List</a></li>
         </ul>
     </div>
 
