--- a/photos.html
+++ b/photos.html
@@ -5,8 +5,8 @@
     <script src="mustache.js" type="text/javascript"></script>
     <script src="jquery.js" type="text/javascript"></script>
 
-    <link href="..\css/css.css" rel="stylesheet" type="text/css">
-    <link href="..\css/960_12_col.css" rel="stylesheet" type="text/css">
+    <link href="css/css.css" rel="stylesheet" type="text/css">
+    <link href="css/960_12_col.css" rel="stylesheet" type="text/css">
 
     <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
@@ -23,11 +23,11 @@
 
     <div>
         <ul id="navbar">
-        <li><a href="..\index.html">Blog</a></li>
-        <li><a href="..\About/about_index.html">About</a></li>
-        <li><a class="navbar-links" href="..\MapTracker/map_index.html">Map Tracker</a></li>
-        <li><a href="..\Photos/photofeed_index.html">Photo Feed</a></li>
-        <li><a href="..\gear.html">Gear List</a></li>
+        <li><a href="index.html">Blog</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="map.html">Map Tracker</a></li>
+        <li><a href="photos.html">Photo Feed</a></li>
+        <li><a href="gear.html">Gear List</a></li>
         </ul>
     </div>
 
