fixed about page

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
 </div>
 
-<body>
+<body class="container_12">
 
 <div id="blog-content" class="grid_8">
 
@@ -38,9 +38,9 @@
 
             <td style="padding: 20px;text-align:left;"><h3>Hi there!</h3>
             <p>My name is Jessica, and I am a native Texan living in the Bay Area. This summer, after years of dreaming and months of scheming, I'm going to embark on the adventure of a lifetime. I will be biking across the country, following the <a id="about-links" href="http://www.adventurecycling.org/routes-and-maps/adventure-cycling-route-network/transamerica-trail/"> TransAmerica Trail </a> from Virginia to Oregon then heading down the Pacific Coast back to San Francisco. <br><br> When I come back from the trip in fall 2014 I'll have yet another adventure in store. I'll be attending <a id="about-links"href="http://www.hackbrightacademy.com/">Hackbright Academy</a>, an intensive software engineering fellowship for women. This website is a personal project meant to both document my trip and also learn HTML, CSS, and JavaScript.<p>
-            <a href="https://twitter.com/runsplorer" target="_blank" border="0px"><img src="..\icons/twitter.png" width="35px"></a>
-            <a href="http://www.instagram.com/bikeacross"target="_blank" border="0px"><img src="..\icons/instagram.png" width="35px"></a>
-            <a href="mailto:mcelroyjessica@gmail.com?Subject=Hello%20there"target="_top" border="0px"><img src="..\icons/email.png" width="35px"></a>
+            <a href="https://twitter.com/runsplorer" target="_blank" border="0px"><img src="{{ site.baseurl }}/icons//twitter.png" width="35px"></a>
+            <a href="http://www.instagram.com/bikeacross"target="_blank" border="0px"><img src="{{ site.baseurl }}/icons/instagram.png" width="35px"></a>
+            <a href="mailto:mcelroyjessica@gmail.com?Subject=Hello%20there"target="_top" border="0px"><img src="{{ site.baseurl }}/icons/email.png" width="35px"></a>
             </td>
         </tr>
     </table>
