fixed image link

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <a href="mailto:mcelroyjessica@gmail.com?Subject=Hello%20there"target="_top" border="0px"><img src="icons/email.png" width="35px"></a>
             <a href="https://www.facebook.com/jessica.mcelroy"target="_blank" border="0px"><img src="icons/facebook.png" width="35px"></a>
             <a href="https://www.linkedin.com/pub/jessica-mcelroy/36/1a/a47"target="_blank" border="0px"><img src="icons/linkedin.png" width="35px"></a>
-            <a href="https://github.com/jmcelroy5"target="_blank" border="0px"><img src="icons/github.png" width="35px"></a>
+            <a href="https://github.com/jmcelroy5"target="_blank" border="0px"><img src="icons/Github.png" width="35px"></a>
             </td>
         </tr>
     </table>
