added mail chimp to index template...
this may not work.

--- a/gear.html
+++ b/gear.html
@@ -105,13 +105,11 @@
                 <h2>NOT PICTURED</h2>
                     <li> Helmet
                     <li> Bike computer
-                    <li> Netbook and charger
+                    <li> iPad mini and charger
                     <li> Phone and Kindle charger
                     <li> Camera
-                    <li> ID, credit cards, etc.
+                    <li> Wallet: ID, credit cards, insurance cards
                     <li> Patch kit
-                    <li> Zip ties
-                    <li> String for clothesline
                     <li> Plastic bags / Ziplocs
                 </ul>
         </article>
