updated navbar across static pages

--- a/map.html
+++ b/map.html
@@ -12,25 +12,25 @@
 <div id="banner">
 
     <header>
-        <h1>Biking Acr<img src="images/bike-wheel.png" height="80" />ss </h1>
+        <a href="{{ site.baseurl }}" style="color:white;"><h1>Biking Acr<img src="{{ site.baseurl }}/images/bike-wheel.png" height="80" />ss </h1></a>
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header>  
 
-    <div>
-        <ul id="navbar">
-        <li><a href="index.html">Blog</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#">Map Tracker</a></li>
-        <li><a href="photos.html">Photo Feed</a></li>
-        <li><a href="gear.html">Gear List</a></li>
+    <div class="grid_3" id="navbox">
+        <ul id="navbar" style="text-align:center;">
+            <li><img src="images/bike-wheel.png" height="50"/></li>
+            <li><a href="index.html">Blog</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="map.html">Map Tracker</a></li>
+            <li><a href="photos.html">Photo Feed</a></li>
+            <li><a href="gear.html">Gear List</a></li>
         </ul>
     </div>
 
-</div>
+    <div class="grid_2">
+    <div>
 
-<body class="container_12">
-
-<div id="blog-content" class="grid_8">
+    <div id="blog-content" class="grid_8">
         <article>
             <h3>Coming Soon...</h3>   
             <p> This page is still in the works. It'll be a map that I can update with pinpoints of my location every so often, so you can follow my progress throughout the trip. You creeper you. <br><br> </p>
@@ -38,26 +38,6 @@
         </article>
     </div>
 
-    <div id="mc_embed_signup">     
-        <form action="http://bikingacross.us3.list-manage.com/subscribe/post?u=bbbe92dadd3ac5ace50a61b31&amp;id=3b65cf9025" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div class="mc-field-group">
-            <label for="mce-EMAIL">
-            </label>
-            <p style="font-size: 13pt; text-align: center"> Sign up for the mailing list to hear about blog updates! </p><input placeholder="Your email address" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-            </div>
-            <div class="mc-field-group-input-group">
-            <ul><li>Email Format:</li><li><input type="radio" value="html" name="EMAILTYPE" id="mce-EMAILTYPE-0"><label for="mce-EMAILTYPE-0">HTML</label></li>
-            <li><input type="radio" value="text" name="EMAILTYPE" id="mce-EMAILTYPE-1"><label for="mce-EMAILTYPE-1">Text</label></li>
-            </ul>
-            </div>
-            <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-             <div class="response" id="mce-success-response" style="display:none"></div>
-            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;"><input type="text" name="b_bbbe92dadd3ac5ace50a61b31_3b65cf9025" value=""></div>
-             <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-        </form>
-    </div>
 
 </body>
 
