--- a/gear.html
+++ b/gear.html
@@ -16,26 +16,26 @@
 
 <div id="banner">
 
-    <header>
-        <h1>Biking Acr<img src="images/bike-wheel.png" height="80" />ss </h1>
+       <header>
+        <a href="{{ site.baseurl }}" style="color:white;"><h1>Biking Acr<img src="{{ site.baseurl }}/images/bike-wheel.png" height="80" />ss </h1></a>
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header>  
 
-    <div>
-        <ul id="navbar">
-        <li><a href="index.html">Blog</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="map.html">Map Tracker</a></li>
-        <li><a href="photos.html">Photo Feed</a></li>
-        <li><a href="gear.html">Gear List</a></li>
+    <div class="grid_3" id="navbox">
+        <ul id="navbar" style="text-align:center;">
+            <li><img src="images/bike-wheel.png" height="50"/></li>
+            <li><a href="index.html">Blog</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="map.html">Map Tracker</a></li>
+            <li><a href="photos.html">Photo Feed</a></li>
+            <li><a href="gear.html">Gear List</a></li>
         </ul>
     </div>
 
-</div>
+    <div class="grid_2">
+    <div>
 
-<body class="container_12">
-
-<div class="grid_8">
+    <div id="blog-content" class="grid_8">
 
         <article>
             <h3> The Gear List</h3>
