fixing css grids

--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
     <title> Biking Across </title>
 </head>
 
+<body class="container_12">
+
 <div id="banner">
 
     <header>
@@ -31,9 +33,9 @@
     <div class="grid_2">
     <div>
 
-    <div id="blog-content" class="grid_8">
+<div id="blog-content" class="grid_8">
 
-    <table width="800px" style="margin:-30px 0 75px 75px;"> 
+    <table width="800px"> 
         <tr>
             <td style="text-align: right"><img src= "me.jpg" style="border: 10px solid black; border-radius:200px;" width="300px"/></div></td>
 
