--- a/photos.html
+++ b/photos.html
@@ -14,6 +14,8 @@
     <title> Biking Across </title>
 </head>
 
+<body class="container_12">
+
 <div id="banner">
 
     <header>
@@ -46,6 +48,7 @@
     <span id="loading">Loading images...<br><img src="spinning-wheel.gif" width="100px" /></span>
     </div>
 </div>
+
 </body>
 
 <script id="instagram-template" type="text/html">
