--- a/gear.html
+++ b/gear.html
@@ -14,6 +14,8 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
+<body class="container_12">
+
 <div id="banner">
 
        <header>
@@ -117,16 +119,3 @@
 
 </body>
 
-
-</body>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-49228857-1', 'bikingacrossthe.us');
-  ga('send', 'pageview');
-
-</script>
