--- a/map.html
+++ b/map.html
@@ -9,6 +9,8 @@
     <title> Biking Across </title>
 </head>
 
+<body class="container_12">
+
 <div id="banner">
 
     <header>
@@ -34,27 +36,13 @@
         <article>
             <h3>Coming Soon...</h3>   
             <p> This page is still in the works. It'll be a map that I can update with pinpoints of my location every so often, so you can follow my progress throughout the trip. You creeper you. <br><br> </p>
-            <a href="..\index.html"style="color:blue;">Back to Blog</a>
+            <a href="index.html"style="color:blue;">Back to Blog</a>
         </article>
     </div>
 
 
 </body>
 
-<script src="mailchimp.js" type="text/javascript">
-
-</script>
-
 
 </body>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-49228857-1', 'bikingacrossthe.us');
-  ga('send', 'pageview');
-
-</script>
