--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
 
     <header>
     <header>
-        <a href="{{ site.baseurl }}" style="color:white;"><h1>Biking Acr<img src="{{ site.baseurl }}/images/bike-wheel.png" height="80" />ss </h1></a>
+        <a href="index.html" style="color:white;"><h1>Biking Acr<img src="images/bike-wheel.png" height="80" />ss </h1></a>
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header>  
 
     <div class="grid_3" id="navbox">
         <ul id="navbar" style="text-align:center;">
-            <li><img src="{{ site.baseurl }}/images/bike-wheel.png" height="50"/></li>
+            <li><img src="images/bike-wheel.png" height="50"/></li>
             <li><a href="index.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="map.html">Map Tracker</a></li>
@@ -29,9 +29,6 @@
             <li><a href="gear.html">Gear List</a></li>
         </ul>
     </div>
-
-    <div class="grid_2">
-    <div>
 
 <div id="blog-content" class="grid_8">
 
