--- a/gear.html
+++ b/gear.html
@@ -19,7 +19,7 @@
 <div id="banner">
 
        <header>
-        <a href="{{ site.baseurl }}" style="color:white;"><h1>Biking Acr<img src="{{ site.baseurl }}/images/bike-wheel.png" height="80" />ss </h1></a>
+        <a href="index.html" style="color:white;"><h1>Biking Acr<img src="images/bike-wheel.png" height="80" />ss </h1></a>
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header>  
 
@@ -33,9 +33,6 @@
             <li><a href="gear.html">Gear List</a></li>
         </ul>
     </div>
-
-    <div class="grid_2">
-    <div>
 
     <div id="blog-content" class="grid_8">
 
