--- a/about.html
+++ b/about.html
@@ -30,9 +30,11 @@
         </ul>
     </div>
 
+<body class="container_12">
+
 <div id="blog-content" class="grid_8">
 
-    <table width="800px"> 
+    <table width="800px" style="margin:-30px 0 75px 75px;"> 
         <tr>
             <td style="text-align: right"><img src= "me.jpg" style="border: 10px solid black; border-radius:200px;" width="300px"/></div></td>
 
@@ -41,14 +43,19 @@
             <a href="https://twitter.com/runsplorer" target="_blank" border="0px"><img src="icons/twitter.png" width="35px"></a>
             <a href="mailto:mcelroyjessica@gmail.com?Subject=Hello%20there"target="_top" border="0px"><img src="icons/email.png" width="35px"></a>
             <a href="https://www.facebook.com/jessica.mcelroy"target="_blank" border="0px"><img src="icons/facebook.png" width="35px"></a>
-            <a href="https://www.linkedin.com/pub/jessica-mcelroy/36/1a/a47"target="_blank" border="0px"><img src="icons/linkedin.png" width="35px"></a>
-            </td>
+            <a href="https://www.linkedin.com/pub/jessica-mcelroy/36/1a/a47"target="_blank" border="0px"><img src="icons/linkedin.png" width="35px"></a></td>
+
         </tr>
     </table>
 
 </div>
 
 </body>
+
+
+
+
+
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
