--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 <div id="blog-content" class="grid_8">
 
             <!-- <td style="text-align: right"> -->
-            <img src= "me.jpg" style="border: 10px solid black; border-radius:200px;"/></div>
+            <img src= "me.jpg" style="border: 10px solid black; border-radius:200px;"/>
             <!-- </td> -->
 
             <!-- <td style="padding: 20px;text-align:left;"> -->
