fixing about page

--- a/about.html
+++ b/about.html
@@ -27,19 +27,23 @@
         </ul>
     </div>
 
-<div id="blog-content" class="grid_8">
+<div id="blog-content" style="padding-top:40px">
 
             <!-- <td style="text-align: right"> -->
-            <img src= "me.jpg" style="border: 10px solid black; border-radius:200px;"/>
+            <div>
+                <span class="grid_4"><img src= "me.jpg" height="300px" style="border: 10px solid black; border-radius:200px;"/></span>
+                <span class="grid_4" style="margin-top:200px;"><h3 style="font-size:60px;">Hi there!</h3>
+                <a href="https://twitter.com/runsplorer" target="_blank" border="0px"><img src="icons/twitter.png" width="35px"></a>
+                <a href="mailto:mcelroyjessica@gmail.com?Subject=Hello%20there"target="_top" border="0px"><img src="icons/email.png" width="35px"></a>
+                <a href="https://www.facebook.com/jessica.mcelroy"target="_blank" border="0px"><img src="icons/facebook.png" width="35px"></a>
+                <a href="https://www.linkedin.com/pub/jessica-mcelroy/36/1a/a47"target="_blank" border="0px"><img src="icons/linkedin.png" width="35px"></a></span>
+            </div>
             <!-- </td> -->
 
             <!-- <td style="padding: 20px;text-align:left;"> -->
-            <h3>Hi there!</h3>
-            <p>My name is Jessica, and I am a native Texan living in the Bay Area. This summer, after years of dreaming and months of scheming, I'm going to embark on the adventure of a lifetime. I will be biking across the country, following the <a id="about-links" href="http://www.adventurecycling.org/routes-and-maps/adventure-cycling-route-network/transamerica-trail/"> TransAmerica Trail </a> from Virginia to Oregon then heading down the Pacific Coast back to San Francisco. <br><br> When I come back from the trip in fall 2014 I'll have yet another adventure in store. I'll be attending <a id="about-links"href="http://www.hackbrightacademy.com/">Hackbright Academy</a>, an intensive software engineering fellowship for women. This website is a personal project meant to both document my trip and also learn HTML, CSS, and JavaScript.<p>
-            <a href="https://twitter.com/runsplorer" target="_blank" border="0px"><img src="icons/twitter.png" width="35px"></a>
-            <a href="mailto:mcelroyjessica@gmail.com?Subject=Hello%20there"target="_top" border="0px"><img src="icons/email.png" width="35px"></a>
-            <a href="https://www.facebook.com/jessica.mcelroy"target="_blank" border="0px"><img src="icons/facebook.png" width="35px"></a>
-            <a href="https://www.linkedin.com/pub/jessica-mcelroy/36/1a/a47"target="_blank" border="0px"><img src="icons/linkedin.png" width="35px"></a>
+            <div class="grid_8">
+                <p>My name is Jessica, and I am a native Texan living in the Bay Area. This summer, after years of dreaming and months of scheming, I'm going to embark on the adventure of a lifetime. I will be biking across the country, following the <a href="http://www.adventurecycling.org/routes-and-maps/adventure-cycling-route-network/transamerica-trail/"> TransAmerica Trail </a> from Virginia to Oregon then heading down the Pacific Coast back to San Francisco. <br><br> When I come back from the trip in fall 2014 I'll have yet another adventure in store. I'll be attending <a href="http://www.hackbrightacademy.com/">Hackbright Academy</a>, an intensive software engineering fellowship for women. This website is a personal project meant to both document my trip and also learn HTML, CSS, and JavaScript.<p>
+            </div>
             <!-- </td> -->
 
         <!-- </tr> -->
