put a max # on instagram photo feed

--- a/photos.html
+++ b/photos.html
@@ -36,11 +36,11 @@
 
 
     <h3> Live Photo Feed </h3>
-    <p>Here are the most recent photos from my Instagram feed. This page instantly updates every time I post a new photo on Instagram, so you'll be able to keep up with my adventures in real time while I am out on the road. I learned how to make this from a <a href="http://jlord.us/your-own-instagram-feed/" style="color:blue;">blog post</a> by Jessica Lord, an awesome JavaScript developer in Oakland.<br><br> If you don't see anything below, please be patient. The images are being pulled from a Google spreadsheet, so sometimes it takes a little while to load.</p>
+    <p>Here are the most recent photos from my Instagram feed. This page instantly updates every time I post a new photo on Instagram, so you'll be able to keep up with my adventures in real time while I am out on the road. I learned how to make this from a <a href="http://jlord.us/your-own-instagram-feed/">blog post</a> by Jessica Lord, an awesome JavaScript developer in Oakland.<br><br> If you don't see anything below, please be patient. The images are being pulled from a Google spreadsheet, so sometimes it takes a little while to load.</p>
     
+    <span id="loading" style="text-align:center;">Loading images...<br><img src="spinning-wheel.gif" width="100px" /></span>
     <div id="instagram">
     <!-- this dude waits patiently to be filled with stuff -->   
-    <span id="loading">Loading images...<br><img src="spinning-wheel.gif" width="100px" /></span>
     </div>
 
 
@@ -61,17 +61,28 @@ var URL='https://docs.google.com/spreadsheet/pub?key=0AtF4b6xGWupgdFdzRHhmckNHak
 function loadSpreadsheet() {
   Tabletop.init({ key: URL, callback: showData, simpleSheet: true });
 }
- 
-function showData(data) {
-  var template = document.getElementById("instagram-template").innerHTML;
-  var output = Mustache.render(template, { rows: data.reverse() });
-  document.getElementById('instagram').innerHTML = output;
+
+function getLast(array, howMany) {
+  start = array.length;
+  cut = start - howMany;
+  if (start < 20) {
+  return array;
+  } else {
+  array = array.splice(cut);
+  return array.reverse();
+  }
 }
  
-document.addEventListener('DOMContentLoaded', function() {
-    $("#loading").hide();
-    loadSpreadsheet();
-});
+function showData(data) {
+   var template = document.getElementById("instagram-template").innerHTML;
+   var output = Mustache.render(template, { rows: getLast(data,18) });
+   document.getElementById('instagram').innerHTML = output;
+ }
+ 
+ document.addEventListener('DOMContentLoaded', function() {
+     $("#loading").hide();
+     loadSpreadsheet();
+ });
 
 </script>
 </html>
