--- a/map.html
+++ b/map.html
@@ -16,8 +16,8 @@
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header>  
 
-    <div class="grid_3" id="navbox">
-        <ul id="navbar" style="text-align:center;">
+    <div class="grid_3">
+        <ul id="navbar" class="navbox" style="text-align:center;">
             <li><img src="images/bike-wheel.png" height="50"/></li>
             <li><a href="index.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
