fixing navbar link colors on About page

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
         <h2>A TransAmerican bike trip in summer 2014</h2>
     </header> 
 
-    <div class="grid_3" id="navbox">
-        <ul id="navbar" style="text-align:center;">
+    <div class="grid_3">
+        <ul id="navbar" class="navbox" style="text-align:center;">
             <li><img src="images/bike-wheel.png" height="50"/></li>
             <li><a href="index.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
@@ -40,9 +40,9 @@
             <div class="grid_8">
                 <p>My name is Jessica, and I am a native Texan living in the Bay Area. This summer, after years of dreaming and months of scheming, I'm going to embark on the adventure of a lifetime. I will be biking across the country, following the <a href="http://www.adventurecycling.org/routes-and-maps/adventure-cycling-route-network/transamerica-trail/"> TransAmerica Trail </a> from Virginia to Oregon then heading down the Pacific Coast back to San Francisco. <br><br> When I come back from the trip in fall 2014 I'll have yet another adventure in store. I'll be attending <a href="http://www.hackbrightacademy.com/">Hackbright Academy</a>, an intensive software engineering fellowship for women. This website is a personal project meant to both document my trip and also learn HTML, CSS, and JavaScript.<p>
                 <a href="https://twitter.com/runsplorer" target="_blank" border="0px"><img src="icons/twitter.png" width="35px"></a>
-                <a href="mailto:mcelroyjessica@gmail.com?Subject=Hello%20there"target="_top" border="0px"><img src="icons/email.png" width="35px"></a>
                 <a href="https://www.facebook.com/jessica.mcelroy"target="_blank" border="0px"><img src="icons/facebook.png" width="35px"></a>
                 <a href="https://www.linkedin.com/pub/jessica-mcelroy/36/1a/a47"target="_blank" border="0px"><img src="icons/linkedin.png" width="35px"></a>
+                <a href="mailto:mcelroyjessica@gmail.com?Subject=Hello%20there"target="_top" border="0px"><img src="icons/email.png" width="35px"></a>
             </div>
             <!-- </td> -->
 
