changing base url on all pages

--- a/map.html
+++ b/map.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <base href="http://www.bikingacrossthe.us/">
+
     <link href="css/css.css" rel="stylesheet" type="text/css">
     <link href="css/960_12_col.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
