--- a/about.html
+++ b/about.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 
 <head>
-    <link href="css/css.css" rel="stylesheet" type="text/css">
-    <link href="css/960_12_col.css" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <title> Biking Across </title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <base href="http://www.bikingacrossthe.us/">
+
+        <link href="/css/css.css" rel="stylesheet" type="text/css">
+        <link href="/css/960_12_col.css" rel="stylesheet" type="text/css">
+        <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+    <title> About </title>
 </head>
 
 <body class="container_12">
