--- a/photos.html
+++ b/photos.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <head>
-    <!-- load in tabletop and mustache -->
-    <script src="tabletop.js" type="text/javascript"></script>
-    <script src="mustache.js" type="text/javascript"></script>
-    <script src="jquery.js" type="text/javascript"></script>
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <base href="http://www.bikingacrossthe.us/">
+    
     <link href="css/css.css" rel="stylesheet" type="text/css">
     <link href="css/960_12_col.css" rel="stylesheet" type="text/css">
 
     <link href='http://fonts.googleapis.com/css?family=Fauna+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <title> Biking Across </title>
+    <title> Photos </title>
+
+        <!-- load in tabletop and mustache -->
+    <script src="tabletop.js" type="text/javascript"></script>
+    <script src="mustache.js" type="text/javascript"></script>
+    <script src="jquery.js" type="text/javascript"></script>
 </head>
 
 <body class="container_12">
