--- a/map.html
+++ b/map.html
@@ -10,11 +10,11 @@
 	<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
 	<link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
 	<style>
-  	#map {
-        position:relative; 
+	#map{
+        position:relative;
         top:0; 
         bottom:0; 
-        width:700px; 
+        width:500px; 
         height:500px;
     }
 	</style>
@@ -49,13 +49,13 @@
 
         <h3>Track my progress</h3>   
 
-        <div id='map'></div><br><br><br><br>
+        <div id="map"></div>
         <script>
 			var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
-    		.setView([37.238756 , -76.509673], 12);
+    		.setView([37.238756 , -76.509673], 10);
 		</script>
 
     </div>
-    
+
 </body>
 </html>
