added some line breaks

--- a/map.html
+++ b/map.html
@@ -49,7 +49,7 @@
 
         <h3>Track my progress</h3>   
 
-        <div id="map"></div>
+        <div id="map"></div><br><br><br><br><br>
         <script>
 			var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
     		.setView([37.238756 , -76.509673], 10);
