--- a/map.html
+++ b/map.html
@@ -9,6 +9,8 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 	<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
 	<link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
+	<script src="sheetsee.js" type="text/javascript"></script>
+
 	<style>
 	#map{
         position:relative;
@@ -50,10 +52,30 @@
         <h3>Track my progress</h3>   
 
         <div id="map"></div><br><br><br><br><br>
+
+
         <script>
-			var map = L.mapbox.map('map', 'examples.map-9ijuk24y')
-    		.setView([37.238756 , -76.509673], 10);
-		</script>
+			var map = Sheetsee.loadMap("map")
+    		// .setView([37.238756 , -76.509673], 10);
+
+     	document.addEventListener('DOMContentLoaded', function() {
+    		var gData
+    		var URL = "https://docs.google.com/spreadsheets/d/1Aie4cWDamxeVnKrjfySL0cFk1XPgmy-MhKt2-gp7XFc/pubhtml"
+    		Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } )
+  		})
+
+  		function showInfo(data) {
+    			gData = data
+    			var optionsJSON = ["placename", "photo-url"]
+    			var template = "<ul><li><a href='{{place}}' target='_blank'>"
+    			+ "<li><h4>{{placename}}</h4></li></ul>"
+  //                + "<img src='{{photo-url}}'></a></li>"
+    			var geoJSON = Sheetsee.createGeoJSON(gData, optionsJSON)
+    			var map = Sheetsee.loadMap("map")
+    			Sheetsee.addTileLayer(map, 'examples.map-20v6611k')
+    			var markerLayer = Sheetsee.addMarkerLayer(geoJSON, map, template)
+  }
+		// </script>
 
     </div>
 
