--- a/map.html
+++ b/map.html
@@ -9,6 +9,7 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
 	<script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
 	<link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
+	<script src="tabletop.js" type="text/javascript"></script>
 	<script src="sheetsee.js" type="text/javascript"></script>
 
 	<style>
