--- a/map.html
+++ b/map.html
@@ -69,18 +69,13 @@
    		  	 function showInfo(data) {
    				gData = data
     			var optionsJSON = ["date", "place", "photo-url"]
-			 	var template = "<ul><li><a href='{{photo-url}}' target='_blank'>"
-                  				+ "<img src='{{photo-url}}'></a></li>"
-                  				+ "<li><h4>{{place}}</h4></li></ul>"
+			 	var template = "<img src="{{photo-url}}">"
    				var geoJSON = Sheetsee.createGeoJSON(gData, optionsJSON);
 	   			var map = Sheetsee.loadMap("map");
    				Sheetsee.addTileLayer(map, 'examples.map-9ijuk24y');
     			var markerLayer = Sheetsee.addMarkerLayer(geoJSON, map, template);
     		} 
 
-
-//		}
- 
 		</script>
 
     </div>
