--- a/map.html
+++ b/map.html
@@ -69,7 +69,9 @@
    		  	 function showInfo(data) {
    				gData = data
     			var optionsJSON = ["date", "place", "photo-url"]
-			 	var template = "{{place}}"
+			 	var template = "<ul><li><a href='{{photo-url}}' target='_blank'>"
+                 + "<img src='{{photo-url}}'></a></li>"
+                 + "<li><h4>{{place}}</h4></li></ul>"
    				var geoJSON = Sheetsee.createGeoJSON(gData, optionsJSON);
 	   			var map = Sheetsee.loadMap("map");
    				Sheetsee.addTileLayer(map, 'examples.map-9ijuk24y');
