adding data to popup

--- a/map.html
+++ b/map.html
@@ -71,7 +71,8 @@
     			var optionsJSON = ["date", "place", "photo-url"]
 			 	var template = "<ul><li><a href='{{photo-url}}' target='_blank'>"
                  + "<img src='{{photo-url}}' height='50' /></a></li>"
-                 + "<li><h4>{{place}}</h4></li></ul>"
+                 + "<li><p>{{place}}</p></li>"
+                 + "<li><p>{{date}}</p></ul>"
    				var geoJSON = Sheetsee.createGeoJSON(gData, optionsJSON);
 	   			var map = Sheetsee.loadMap("map");
    				Sheetsee.addTileLayer(map, 'examples.map-9ijuk24y');
