--- a/map.html
+++ b/map.html
@@ -69,9 +69,9 @@
    		  	 function showInfo(data) {
    				gData = data
     			var optionsJSON = ["date", "place", "photo-url"]
-			 	var template = "<a href='{{photo-url}}' target='_blank'><br>"
-                 + "<img src='{{photo-url}}' height='50' /></a><br>"
-                 + "<p><em>{{place}}</em></p><br>"
+			 	var template = "<a href='{{photo-url}}' target='_blank'>"
+                 + "<img src='{{photo-url}}' height='50' /></a>"
+                 + "<p><strong>{{place}}</strong></p>"
                  + "<p>{{date}}</p>"
    				var geoJSON = Sheetsee.createGeoJSON(gData, optionsJSON);
 	   			var map = Sheetsee.loadMap("map");
