fixing popup template

--- a/map.html
+++ b/map.html
@@ -68,7 +68,7 @@
 
    		  	 function showInfo(data) {
    				gData = data
-    			var optionsJSON = ["date", "place", "photo-url"]
+    			var optionsJSON = ["date", "place", "photo-url","note","marker-color"]
 			 	var template = "<a href='{{photo-url}}' target='_blank'>"
                  + "<img src='{{photo-url}}' height='50' /></a>"
                  + "<p><strong>{{place}}</strong></p>"
