--- a/map.html
+++ b/map.html
@@ -71,9 +71,7 @@
     			var optionsJSON = ["date", "place", "photo-url","note","marker-color"]
 			 	var template = "<a href='{{photo-url}}' target='_blank'>"
                  + "<img src='{{photo-url}}' height='50' /></a>"
-                 + "<p><strong>{{place}}</strong></p>"
-                 + "<p>{{date}}</p>"
-                 +"<p>{{note}}</p>"
+                 + "<p style='line-height:80%'><strong>{{place}}</strong><br>{{date}}<br>{{note}}</p>"
    				var geoJSON = Sheetsee.createGeoJSON(gData, optionsJSON);
 	   			var map = Sheetsee.loadMap("map");
    				Sheetsee.addTileLayer(map, 'examples.map-9ijuk24y');
