--- a/photos.html
+++ b/photos.html
@@ -12,10 +12,20 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <title> Photos </title>
 
-        <!-- load in tabletop and mustache -->
+    <!-- load in tabletop and mustache -->
     <script src="tabletop.js" type="text/javascript"></script>
     <script src="mustache.js" type="text/javascript"></script>
     <script src="jquery.js" type="text/javascript"></script>
+
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-49228857-1', 'bikingacrossthe.us');
+    ga('send', 'pageview');
+    </script>
 </head>
 
 <body class="container_12">
