Updated mapbox tile layer

--- a/map.html
+++ b/map.html
@@ -85,8 +85,8 @@
                  + "<p style='line-height:100%'><strong>{{place}}</strong><br>{{date}}<br>{{note}}</p>"
    				var geoJSON = Sheetsee.createGeoJSON(gData, optionsJSON);
 	   			var map = Sheetsee.loadMap("map");
-   				Sheetsee.addTileLayer(map, 'examples.map-9ijuk24y');
-    			var markerLayer = Sheetsee.addMarkerLayer(geoJSON, map, template);
+   				Sheetsee.addTileLayer(map, 'examples.map-i86nkdio');
+    			        var markerLayer = Sheetsee.addMarkerLayer(geoJSON, map, template);
     		} 
 
 		</script>
